fix wrap-section two

--- a/src/sass/layout/_aboutRestorant.scss
+++ b/src/sass/layout/_aboutRestorant.scss
@@ -92,6 +92,10 @@
     max-width: 312px;
   }
 }
+.restaurant-wrap-accent {
+  display: flex;
+  align-items: center;
+}
 // ОФОРМЛЕНИЕ ТЕКСТА
 .restaurant__slogan {
   font-family: 'Times New Roman';
